// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navigation without context displays a generic error message 1`] = `
<div
  className="openforms-card"
>
  <header
    className="openforms-card__header"
  >
    <h1
      className="utrecht-heading-1 openforms-title"
    >
      Payment overview
    </h1>
  </header>
  <div
    className="openforms-card__body"
  >
     
    <div
      className="utrecht-alert utrecht-alert--error"
    >
      <div
        className="utrecht-alert__icon"
      >
        <i
          className="fa fas fa-exclamation-circle"
        />
      </div>
      <div
        className="utrecht-alert__message"
      >
        We can't display any payment information - did you maybe get here by accident?
      </div>
    </div>
     
  </div>
</div>
`;

exports[`on valid redirect renders an error message on failure 1`] = `
<div
  className="openforms-card"
>
  <header
    className="openforms-card__header"
  >
    <h1
      className="utrecht-heading-1 openforms-title"
    >
      Payment overview
    </h1>
  </header>
  <div
    className="openforms-card__body"
  >
     
    <div
      className="openforms-body"
    >
      <div
        className="utrecht-alert utrecht-alert--error"
      >
        <div
          className="utrecht-alert__icon"
        >
          <i
            className="fa fas fa-exclamation-circle"
          />
        </div>
        <div
          className="utrecht-alert__message"
        >
          The payment has failed. If you aborted the payment, please complete payment from the confirmation email.
        </div>
      </div>
    </div>
    <a
      className="utrecht-link utrecht-link--openforms"
      href="/"
      onClick={[Function]}
    >
      Back to form start
    </a>
     
  </div>
</div>
`;

exports[`on valid redirect renders the status information 1`] = `
<div
  className="openforms-card"
>
  <header
    className="openforms-card__header"
  >
    <h1
      className="utrecht-heading-1 openforms-title"
    >
      Payment overview
    </h1>
  </header>
  <div
    className="openforms-card__body"
  >
     
    <div
      className="openforms-body"
    >
      Your payment has been received.
    </div>
    <a
      className="utrecht-link utrecht-link--openforms"
      href="/"
      onClick={[Function]}
    >
      Back to form start
    </a>
     
  </div>
</div>
`;
